Added test checking